<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:background="@color/black">

    <LinearLayout
        android:id="@+id/btnAudio"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/selector_rect"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:nextFocusRight="@+id/btnCamera"
        android:nextFocusUp="@+id/layout_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/audioStatusImage"
            android:layout_width="@dimen/option_image_size"
            android:layout_height="@dimen/option_image_size"
            android:clickable="false"
            android:duplicateParentState="true"
            android:focusable="false"
            android:src="@drawable/icon_meeting_audio" />

        <TextView
            android:id="@+id/text_audio"
            style="@style/ZMTextView.ToolbarBtnLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:clickable="false"
            android:duplicateParentState="true"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/btn_audio"
            android:textSize="@dimen/option_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnCamera"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/selector_rect"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:nextFocusLeft="@+id/btnAudio"
        android:nextFocusRight="@+id/btnShare"
        android:nextFocusUp="@+id/layout_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/videotatusImage"
            android:layout_width="@dimen/option_image_size"
            android:layout_height="@dimen/option_image_size"
            android:clickable="false"
            android:duplicateParentState="true"
            android:focusable="false"
            android:src="@drawable/icon_meeting_video" />

        <TextView
            android:id="@+id/text_video"
            style="@style/ZMTextView.ToolbarBtnLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:clickable="false"
            android:duplicateParentState="true"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/btn_video"
            android:textSize="@dimen/option_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnShare"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/selector_rect"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:nextFocusLeft="@+id/btnCamera"
        android:nextFocusRight="@+id/btnPlist"
        android:nextFocusUp="@+id/layout_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/shareStatusImage"
            android:layout_width="@dimen/option_image_size"
            android:layout_height="@dimen/option_image_size"
            android:clickable="false"
            android:duplicateParentState="true"
            android:focusable="false"
            android:src="@drawable/icon_share_resume" />

        <TextView
            android:id="@+id/text_share"
            style="@style/ZMTextView.ToolbarBtnLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:clickable="false"
            android:duplicateParentState="true"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/btn_share"
            android:textSize="@dimen/option_text_size" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/btnPlist"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/selector_rect"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:nextFocusLeft="@+id/btnShare"
        android:nextFocusRight="@+id/moreActionImg"
        android:nextFocusUp="@+id/layout_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/option_image_size"
            android:layout_height="@dimen/option_image_size"
            android:clickable="false"
            android:duplicateParentState="true"
            android:focusable="false"
            android:src="@drawable/zm_btn_plist" />

        <TextView
            android:id="@+id/text_plist"
            style="@style/ZMTextView.ToolbarBtnLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:clickable="false"
            android:duplicateParentState="true"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/btn_chats"
            android:textSize="@dimen/option_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/moreActionImg"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/selector_rect"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:nextFocusLeft="@+id/btnPlist"
        android:nextFocusUp="@+id/layout_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/option_image_size"
            android:layout_height="@dimen/option_image_size"
            android:clickable="false"
            android:duplicateParentState="true"
            android:focusable="false"
            android:src="@drawable/zm_btn_more" />

        <TextView
            android:id="@+id/text_more"
            style="@style/ZMTextView.ToolbarBtnLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:clickable="false"
            android:duplicateParentState="true"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/btn_more"
            android:textSize="@dimen/option_text_size" />

    </LinearLayout>

</LinearLayout>